# arviz_dashboard

./: .gitignore  .pre-commit-config.yaml  .prettierrc  .taplo.toml  CONTRIBUTING.md  README.md  environment.yaml  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
arviz_dashboard/: __init__.py  elpd.py  forest.py  ppc.py  streaming.py
arviz_dashboard/marginal/: one_d.py
examples/: anywidget-example.ipynb  class_integration.ipynb  create_streaming_plot.ipynb  elpd.py  elpd_dashboard.ipynb  forest.py  forest_dashboard.ipynb  posterior-marginal1d-examples.ipynb  trace.ipynb
src/arviz_dashboard/: __init__.py  dashboards.py  elpd.py  forestplot.py  ppc.py
src/arviz_dashboard/marginal/: one_d.py
src/arviz_dashboard/panel/: elpd.py  forest.py  forest_bokeh.py  plots.py  ppc.py  widgets.py
src/arviz_dashboard/panel/marginal/: one_d.py
src/arviz_dashboard/panel/trace/: trace.py
src/arviz_dashboard/py/: forestplot.py  models.py  traceplot.py
src/arviz_dashboard/trace/: trace.py
src/arviz_dashboard/ts/: forestplot.ts  traceplot.ts  utils.ts
src/js/: forestplot.ts  widget.ts
