[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [{name = "arviz-devs"}]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "arviz",
    "bokeh",
    "jupyterlab",
    "panel",
]
description = "Dashboards for Bayesian modeling"
dynamic = ["version"]
keywords = []
license = {file = "LICENSE"}
maintainers = []
name = "arviz_dashboard"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">3.9"

[project.optional-dependencies]
dev = [
    "ipdb",
    "pre-commit",
    "pyre-check",
]
test = ["pytest", "pytest-cov"]
examples = ["pymc"]

[project.urls]
"Bug Tracker" = "https://github.com/arviz-devs/arviz_dashboard/issues"
"Documentation" = "https://github.com/arviz-devs/arviz_dashboard"
"Homepage" = "https://github.com/arviz-devs/arviz_dashboard"
"Repository" = "https://github.com/arviz-devs/arviz_dashboard"

[tool.setuptools.dynamic]
version = {attr = "arviz_dashboard.__version__"}
