[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [{name = "arviz-devs"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering",
]
dependencies = [
    "anywidget == 0.9.13",
    "arviz == 0.19.0",
    "watchfiles == 0.24.0",
]
description = "Bayesian dashboards"
dynamic = ["version"]
keywords = []
license = {file = "LICENSE"}
maintainers = []
name = "arviz_dashboard"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">3.10,<3.12"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-annotations",
  "flake8-builtins",
  "flake8-debugger",
  "flake8-eradicate",
  "flake8-markdown",
  "flake8-print",
  "flake8-pyproject",
  "ipdb",
  "isort",
  "mdformat",
  "mdformat-myst",
  "mdformat_tables",
  "pre-commit",
  "pycln",
  "pydoclint",
  "pyre-check",
  "yamlfix",
]
examples = ["pymc"]
notebooks = [
  "jupyterlab",
  "jupyterlab-katex",
  "jupyterlab-spellchecker",
  "jupyterlab-unfold",
  "jupyterlab_code_formatter",
]
tests = [
  "pytest",
  "pytest-cov",
]

[project.urls]
"Bug Tracker" = "https://github.com/arviz-devs/arviz_dashboard/issues"
"Documentation" = "https://github.com/arviz-devs/arviz_dashboard"
"Homepage" = "https://github.com/arviz-devs/arviz_dashboard"
"Repository" = "https://github.com/arviz-devs/arviz_dashboard"

[tool.black]
line-length = 100

[tool.flake8]
extend-exclude = "src/arviz_dashboard/panel"
ignore = [
  "ANN002", # missing type annotations for *args
  "ANN003", # missing type annotations for *kwargs
  "D100", # missing docstring in public module
  "D104", # missing docstring in public package
  "D107", # missing docstring in __init__ methods of classes
]
max-line-length = 100
per-file-ignores = ["__init__.py:F401"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.pycln]
all = true
disable_all_dunder_policy = true
expand_stars = true
extend_exclude = "__init__.py"
path = "src/arviz_dashboard"
verbose = true

[tool.pydoclint]
style = "numpy"

[tool.yamlfix]
explicit_start = false
line_length = 100
section_whitelines = 1
sequence_style = "block_style"
whitelines = 1
