[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
authors = [{name = "arviz-devs"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering",
]
dependencies = [
    "anywidget == 0.9.13",
    "arviz-base[h5netcdf] ~= 0.2.0",
    "watchfiles == 0.24.0",
    "xarray ~= 2024.9.0",
]
description = "Bayesian dashboards"
dynamic = ["version"]
keywords = []
license = {file = "LICENSE"}
maintainers = []
name = "arviz_dashboard"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">3.10,<3.12"

[project.optional-dependencies]
dev = [
  "ipdb",
  "pre-commit",
  "ruff",
]
examples = ["pymc"]
notebooks = [
  "jupyterlab",
  "jupyterlab-katex",
  "jupyterlab-spellchecker",
  "jupyterlab-unfold",
  "jupyterlab_code_formatter",
]
tests = [
  "pytest",
  "pytest-cov",
]

[project.urls]
"Bug Tracker" = "https://github.com/arviz-devs/arviz_dashboard/issues"
"Documentation" = "https://github.com/arviz-devs/arviz_dashboard"
"Homepage" = "https://github.com/arviz-devs/arviz_dashboard"
"Repository" = "https://github.com/arviz-devs/arviz_dashboard"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
